[package]
name = "shadomplexer"
version = "0.1.0"
authors = ["DuckVador <Lx3JQkmzRS@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.4"
bytes = "0.6.0"
ring = "0.16.17"
serde = {version = "1.0", features = [ "derive" ]}
serde_yaml = "0.8"
clap = "2.33"
lru = "0.6.1"